--- a/.gitattributes
+++ b/.gitattributes
@@ -74,7 +74,8 @@
 *.gif lfs-file
 *.iff lfs-file
 *.pict lfs-file
-*.png binary 
+*.png lfs-file
+/docs/*.png binary 
 *.psd lfs-file
 *.svg lfs-file
 *.tga lfs-file
