--- a/.gitattributes
+++ b/.gitattributes
@@ -74,8 +74,7 @@
 *.gif lfs-file
 *.iff lfs-file
 *.pict lfs-file
-*.png lfs-file
-/docs/*.png binary 
+*.png binary
 *.psd lfs-file
 *.svg lfs-file
 *.tga lfs-file
